# repulsive-shells

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: Extrapolation_HeadPunch.yaml  Extrapolation_Leaf.yaml  Interpolation_SCAPE_frontback.yaml  Interpolation_SphereThroughTunnel.yaml  Mean_X.yaml  SFM_HyperbolicDisk.yaml  SFM_Torus.yaml  finger0.ply
data/Humanoid/: Rigging_SCAPE_rm_5.ply  Rigging_SCAPE_rm_6.ply  Rigging_SCAPE_rm_8.ply  Rigging_SCAPE_rm_9.ply  Rigging_SCAPE_rm_ref.ply  new.ply  new5.ply  new6n.ply
data/HyperbolicDisk/: AdaptedDisk_R1_N30.ply  AdaptedDisk_R1_N30_S1.ply  AdaptedDisk_R1_N62.ply
data/Leaf/: sbdv_step0.ply  sbdv_step1.ply
data/SphereThroughHole/: TranslationLoop4Sphere_L1.ply  TranslationLoop4Sphere_L2.ply  Wall_7.ply
data/Torus/: Torus_128_64.ply  Torus_64_64.ply  Torus_64_64_sdv.ply  Torus_96_64.ply
include/: BarycenterPathEnergy.h  CombinedDeformation.h  FaceNormals.h  HessianMetric.h  LinearCombinationOperator.h  MatrixOperatorMapWrapper.h  MeshIO.h  NRICReferenceBendingFunctional.h  NRICReferenceMembraneFunctional.h  OperatorElasticMeanFunctionalHessian.h  OperatorPathEnergyHessian.h  PathMetrics.h  ProjectionProlongation.h  RotationPathEnergy.h  SoftPointConstraint.h
include/GraphManifold/: DifferencePathEnergy.h  FunctionalMeanEnergy.h
include/Optimization/: LineSearchNewtonCG.h  Newton.h  OperatorDerivativeTests.h  PreconditionedGD.h  Preconditioners.h  SteihaugCG.h  TrustRegionNewton.h
include/ScaryTPE/: SobolevSlobodeckij.h  TPObstacleEnergy.h  TangentPointEnergy.h
include/SpookyTPE/: AdaptiveEnergy.h  AllPairsEnergy.h  BarnesHutEnergy.h  ClusterTree.h  FastMultipoleEnergy.h  TangentPointNode.h
src/: AugmentedSurfaceExtrapolation.cpp  AugmentedSurfaceInterpolation.cpp  ElasticSurfaceExtrapolation.cpp  EvaluateTPE.cpp  Prolongation.cpp  RepulsiveMeans.cpp  ShapeFromMetric.cpp
